--- a/content/themes/elements-woocommerce/css/app.css
+++ b/content/themes/elements-woocommerce/css/app.css
@@ -1365,12 +1365,13 @@ footer {
     padding-left: 1.875rem;
     padding-right: 1.875rem; } }
 main {
+  z-index: 900;
   height: auto !important;
   height: 100%;
   min-height: 100%;
   overflow: hidden;
-  background: white;
-  z-index: 900; }
+  padding-top: 60px;
+  background-color: white; }
 
 header {
   display: -webkit-box;
@@ -1395,8 +1396,8 @@ header {
   position: fixed;
   z-index: 1100;
   width: 100%;
-  padding-top: 15px;
-  padding-bottom: 15px; }
+  height: 60px;
+  background-color: #f0f0f0; }
   header .link-logo {
     width: 50px; }
 
