--- a/content/themes/elements-woocommerce/css/app.css
+++ b/content/themes/elements-woocommerce/css/app.css
@@ -1477,10 +1477,7 @@ nav ul li.current {
   padding-bottom: 50%; }
 
 .slider-images {
-  top: 0;
-  left: 0.9375rem;
-  position: relative;
-  width: calc(100% - 1.875rem);
+  width: 100%;
   overflow: hidden;
   list-style: none; }
   .slider-images li {
@@ -1542,43 +1539,43 @@ nav ul li.current {
   -ms-transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
-  .slider-controls .arrow {
+  .slider-controls a {
     height: 100%;
     width: 2.75rem;
     position: absolute;
     top: 0;
     display: block;
     cursor: pointer; }
-    .slider-controls .arrow i {
+    .slider-controls a i {
       width: 1.25rem;
       height: 1.25rem;
       top: 50%;
       left: 50%;
       position: absolute;
       cursor: pointer; }
-      .slider-controls .arrow i:before {
+      .slider-controls a i:before {
         width: 0.1875rem;
         height: 100%;
         position: absolute;
         background: black;
         content: " "; }
-      .slider-controls .arrow i:after {
+      .slider-controls a i:after {
         height: 0.1875rem;
         width: 100%;
         position: absolute;
         background: black;
         content: " "; }
-    .slider-controls .arrow.arrow-left {
+    .slider-controls a.slider-prev {
       left: 0;
       margin-left: 2em;
       -webkit-transform: rotate(-45deg); }
-      .slider-controls .arrow.arrow-left i {
+      .slider-controls a.slider-prev i {
         background-position: -64px -32px; }
-    .slider-controls .arrow.arrow-right {
+    .slider-controls a.slider-next {
       right: 0;
       margin-right: 2em;
       -webkit-transform: rotate(135deg); }
-      .slider-controls .arrow.arrow-right i {
+      .slider-controls a.slider-next i {
         background-position: -64px -64px; }
 
 .section-slider .section-content .slider-controls {
