--- a/content/themes/elements-woocommerce/sass/modules/slider/_slider-controls.scss
+++ b/content/themes/elements-woocommerce/sass/modules/slider/_slider-controls.scss
@@ -5,8 +5,8 @@
   left: 50%;
   position: absolute;
   @include transform( translate(-50%, -50%) );
-  
-  .arrow{
+
+  a{
     height: 100%;
     width: rem-calc(44);
     position: absolute;
@@ -14,16 +14,16 @@
     display: block;
     cursor: pointer;
 //    z-index: $zIndex-rsArrow;
-    
-    i{		
+
+    i{
       width: rem-calc(20);
       height: rem-calc(20);
       top: 50%;
       left: 50%;
-      
+
       position: absolute;
       cursor: pointer;
-      
+
       &:before{
         width: rem-calc(3);
         height: 100%;
@@ -31,7 +31,7 @@
         background: $black;
         content: " ";
       }
-      
+
       &:after{
         height: rem-calc(3);
         width: 100%;
@@ -40,22 +40,22 @@
         content: " ";
       }
     }
-    
-    &.arrow-left{ 
+
+    &.slider-prev{
       left: 0;
       margin-left: 2em;
       -webkit-transform: rotate(-45deg);
-      
-      i{ 
+
+      i{
         background-position: -64px -32px;
       }
     }
-    
-    &.arrow-right{ 
+
+    &.slider-next{
       right: 0;
       margin-right: 2em;
       -webkit-transform: rotate(135deg);
-      
+
       i{
         background-position: -64px -64px;
       }
@@ -68,7 +68,7 @@
   .slider-controls{
     @include hide( .3s );
   }
-  
+
   &:hover .slider-controls{
     @include show( .3s );
   }
