--- a/content/themes/elements-woocommerce/sass/modules/slider/_slider.scss
+++ b/content/themes/elements-woocommerce/sass/modules/slider/_slider.scss
@@ -12,15 +12,11 @@ $ratio: (1 / 2) * 100%; // 2:1
 
 // Gallery: images
 .slider-images{
-  top: 0;
-  left: $column-gutter / 2;
-  position: relative;
-  
-  width: calc(100% - #{$column-gutter});
+  width: 100%;
   overflow: hidden;
-  
+
   list-style: none;
-  
+
   li{
     width: 100%;
     height: 100%;
@@ -30,18 +26,18 @@ $ratio: (1 / 2) * 100%; // 2:1
     opacity: 0;
     visibility: hidden;
     transition: .5s;
-    
+
     img{
       height: 100%;
       width: auto;
       max-width: none;
       display: block;
-      
+
       top: 50%;
       left: 50%;
       @include transform( translate(-50%, -50%) );
     }
-    
+
     &.is-active{
       opacity: 1;
       visibility: visible;
